--- a/MEMOO/MEMOO/Base.lproj/Main.storyboard
+++ b/MEMOO/MEMOO/Base.lproj/Main.storyboard
@@ -733,16 +733,16 @@
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="Epz-FB-8mx">
-                                <rect key="frame" x="16" y="355" width="343" height="76.666666666666686"/>
+                                <rect key="frame" x="16" y="355" width="343" height="78.666666666666686"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mka-g7-XkM">
-                                        <rect key="frame" x="0.0" y="0.0" width="343" height="37.333333333333336"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="38.666666666666664"/>
                                         <fontDescription key="fontDescription" name="RFKrabuler-Regular" family="RF Krabuler" pointSize="32"/>
                                         <color key="textColor" name="white_"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dSf-Vx-0og">
-                                        <rect key="frame" x="0.0" y="53.333333333333321" width="343" height="23.333333333333336"/>
+                                        <rect key="frame" x="0.0" y="54.666666666666686" width="343" height="24"/>
                                         <fontDescription key="fontDescription" name="RFKrabuler-Regular" family="RF Krabuler" pointSize="20"/>
                                         <color key="textColor" name="white_"/>
                                         <nil key="highlightedColor"/>
@@ -862,10 +862,10 @@
                                                     </constraints>
                                                 </view>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XDm-yh-Yas">
-                                                    <rect key="frame" x="132.33333333333334" y="2" width="31.666666666666657" height="20"/>
+                                                    <rect key="frame" x="134" y="2" width="30" height="20"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="88" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Ic-d3-aHt">
-                                                            <rect key="frame" x="7.9999999999999991" y="0.0" width="15.666666666666664" height="20"/>
+                                                            <rect key="frame" x="8" y="0.0" width="14" height="20"/>
                                                             <fontDescription key="fontDescription" name="RFKrabuler-Regular" family="RF Krabuler" pointSize="14"/>
                                                             <color key="textColor" name="white_"/>
                                                             <nil key="highlightedColor"/>
@@ -1079,6 +1079,12 @@
                                     <constraint firstAttribute="width" secondItem="iEQ-uJ-eE9" secondAttribute="height" multiplier="1:1.5" id="c1F-85-Nfe"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zm6-46-Edj">
+                                <rect key="frame" x="171" y="755.33333333333337" width="33" height="18.666666666666629"/>
+                                <fontDescription key="fontDescription" name="RFKrabuler-Regular" family="RF Krabuler" pointSize="16"/>
+                                <color key="textColor" name="white_"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="7gw-qc-ez7"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -1086,7 +1092,9 @@
                             <constraint firstAttribute="bottom" secondItem="nBj-gT-IQ7" secondAttribute="bottom" id="3jB-3J-JOP"/>
                             <constraint firstAttribute="trailing" secondItem="nBj-gT-IQ7" secondAttribute="trailing" id="5TK-4G-ef0"/>
                             <constraint firstItem="nBj-gT-IQ7" firstAttribute="top" secondItem="m9r-n2-PsC" secondAttribute="top" id="6Xa-Or-O3F"/>
+                            <constraint firstItem="zm6-46-Edj" firstAttribute="centerX" secondItem="m9r-n2-PsC" secondAttribute="centerX" id="K9N-Ac-Zm3"/>
                             <constraint firstItem="7gw-qc-ez7" firstAttribute="trailing" secondItem="iEQ-uJ-eE9" secondAttribute="trailing" constant="48" id="Rsn-Xb-CxD"/>
+                            <constraint firstItem="7gw-qc-ez7" firstAttribute="bottom" secondItem="zm6-46-Edj" secondAttribute="bottom" constant="4" id="gK1-mr-dcu"/>
                             <constraint firstItem="nBj-gT-IQ7" firstAttribute="leading" secondItem="m9r-n2-PsC" secondAttribute="leading" id="gqF-ea-ZgA"/>
                             <constraint firstItem="iEQ-uJ-eE9" firstAttribute="leading" secondItem="7gw-qc-ez7" secondAttribute="leading" constant="48" id="no3-fT-f7S"/>
                             <constraint firstItem="iEQ-uJ-eE9" firstAttribute="centerY" secondItem="m9r-n2-PsC" secondAttribute="centerY" constant="100" id="snA-SE-6Xr"/>
@@ -1094,6 +1102,9 @@
                     </view>
                     <navigationItem key="navigationItem" id="F6z-Bo-9bd"/>
                     <nil key="simulatedTopBarMetrics"/>
+                    <connections>
+                        <outlet property="versionLabel" destination="zm6-46-Edj" id="5oh-M5-7Hb"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iKt-ht-jCI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
