--- a/MEMOO/MEMOO/Base.lproj/Main.storyboard
+++ b/MEMOO/MEMOO/Base.lproj/Main.storyboard
@@ -841,9 +841,9 @@
                                                             </constraints>
                                                         </view>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_____" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ALU-aV-IaY">
-                                                            <rect key="frame" x="4" y="158" width="154" height="34"/>
+                                                            <rect key="frame" x="4" y="158" width="154" height="42"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="height" constant="18" id="Hh7-n0-5kC"/>
+                                                                <constraint firstAttribute="height" constant="20" id="Hh7-n0-5kC"/>
                                                             </constraints>
                                                             <fontDescription key="fontDescription" name="RFKrabuler-Regular" family="RF Krabuler" pointSize="18"/>
                                                             <color key="textColor" name="grey_darken_5"/>
@@ -856,7 +856,7 @@
                                                         <constraint firstItem="ALU-aV-IaY" firstAttribute="top" secondItem="i9b-XV-Ev9" secondAttribute="bottom" id="eyt-eo-DRK"/>
                                                         <constraint firstItem="i9b-XV-Ev9" firstAttribute="top" secondItem="EcL-dL-I2A" secondAttribute="top" constant="4" id="iPX-1k-RNu"/>
                                                         <constraint firstAttribute="trailing" secondItem="i9b-XV-Ev9" secondAttribute="trailing" constant="4" id="lmd-Ud-FJq"/>
-                                                        <constraint firstAttribute="bottom" secondItem="ALU-aV-IaY" secondAttribute="bottom" constant="8" id="mme-Sc-hke"/>
+                                                        <constraint firstAttribute="bottom" secondItem="ALU-aV-IaY" secondAttribute="bottom" id="mme-Sc-hke"/>
                                                         <constraint firstItem="i9b-XV-Ev9" firstAttribute="leading" secondItem="EcL-dL-I2A" secondAttribute="leading" constant="4" id="xeT-IV-OLM"/>
                                                         <constraint firstAttribute="trailing" secondItem="ALU-aV-IaY" secondAttribute="trailing" constant="4" id="yfX-yb-Qgi"/>
                                                     </constraints>
